# cpp-miltech-study

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json
.devcontainer/: apt-packages.in
demos/lesson_5_1/01_multi_stage/src/: main.cpp
demos/lesson_5_1/02_docker_build/src/: main.cpp
demos/lesson_5_1/03_docker_run/src/: main.cpp
demos/lesson_5_1/04_volume_layout/src/: main.cpp
demos/lesson_5_1/05_healthcheck/src/: health_check.cpp  healthctl.cpp  service.cpp
demos/lesson_5_3/robot_telemetry/src/: status_monitor.cpp  telemetry_publisher.cpp
demos/lesson_5_4/01_typed_topic/robot_ws/src/typed_topic_demo/src/: target_publisher.cpp  target_subscriber.cpp
demos/lesson_5_4/02_custom_service/robot_ws/src/custom_service_demo/src/: trigger_client.cpp  trigger_server.cpp
demos/lesson_5_4/03_service_status_topic/robot_ws/src/service_status_demo/src/: actuator_server.cpp
demos/lesson_5_4/04_parameters_yaml/robot_ws/src/parameters_demo/src/: parameter_reader.cpp
demos/lesson_5_4/05_launch/robot_ws/src/launch_demo/src/: controller_process.cpp  sensor_process.cpp
demos/lesson_5_4/06_logic_split/robot_ws/src/logic_split_demo/src/: decision_node.cpp
demos/lesson_5_4/06_logic_split/robot_ws/src/logic_split_demo/test/: target_decision_test.cpp
demos/lesson_5_6/: README.md
demos/lesson_5_6/01_msg_array/: README.md
demos/lesson_5_6/01_msg_array/robot_ws/src/msg_array_demo/: CMakeLists.txt  package.xml
demos/lesson_5_6/01_msg_array/robot_ws/src/msg_array_demo/msg/: LocalScanLite.msg
demos/lesson_5_6/01_msg_array/robot_ws/src/msg_array_demo/src/: scan_publisher.cpp  scan_subscriber.cpp
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_05/src/: main.cpp  telemetry.cpp
homework_06/: CMakeLists.txt
homework_06/data/: input.txt  unknown_ammo.txt
homework_06/include/: ballistics.hpp  macros.h
homework_06/scripts/: check-quality
homework_06/src/: ballistics.cpp  main.cpp
homework_06/tests/: ballistics_tests.cpp
homework_07_simulations/: CMakeLists.txt
homework_07_simulations/include/ballistic/: BallisticSolver.h
homework_07_simulations/include/common/: DropPoint.h  SimStep.h  macros.h
homework_07_simulations/include/config/: ConfigLoader.h  DroneConfig.h  FileConfigLoader.h  HttpConfigLoader.h  UartConfigProvider.h
homework_07_simulations/include/drone/: ConfigLoader.h  DroneConfig.h
homework_07_simulations/include/factories/: ConfigLoaderFactory.h  ResultWriterFactory.h  SolverFactory.h  TargetProviderFactory.h
homework_07_simulations/include/interfaces/: IBallisticSolver.h  IConfigLoader.h  IDroneState.h  IResultWriter.h  ITargetProvider.h  ITimeProvider.h
homework_07_simulations/include/mission/: DronePhysics.h  DroneState.h  IDroneStateSource.h  IStepDriver.h  MissionProcessor.h  UartDroneState.h  UartStepDriver.h
homework_07_simulations/include/protocol/: IDroneGpioController.h  IMissionCommandSource.h  IUartLink.h  IUartTelemetryProvider.h  drone_link.h
homework_07_simulations/include/providers/: FixedTimeProvider.h  TargetLoader.h  UartTargetProvider.h
homework_07_simulations/include/result/: ResultWriter.h
homework_07_simulations/include/solvers/: AnalyticalSolver.h  BallisticSolver.h  TableSolver.h
homework_07_simulations/src/: main.cpp
homework_07_simulations/src/ballistic/: AnalyticalSolver.cpp
homework_07_simulations/src/config/: ConfigLoader.cpp  HttpConfigLoader.cpp  UartConfigProvider.cpp
homework_07_simulations/src/drone/: ConfigLoader.cpp
homework_07_simulations/src/factories/: ConfigLoaderFactory.cpp  ResultWriterFactory.cpp  SolverFactory.cpp  TargetProviderFactory.cpp
homework_07_simulations/src/mission/: DronePhysics.cpp  DroneState.cpp  MissionProcessor.cpp  UartDroneState.cpp  UartStepDriver.cpp
homework_07_simulations/src/protocol/: LibGpioController.cpp  MissionCommandSource.cpp  SimGpioController.cpp  UartLink.cpp  UartTelemetryProvider.cpp
homework_07_simulations/src/providers/: FixedTimeProvider.cpp  HttpTargetProvider.cpp  JsonTargetProvider.cpp  SerialTargetProvider.cpp  TestTargetProvider.cpp  ThreadSafeTargetProvider.cpp  UartTargetProvider.cpp
homework_07_simulations/src/result/: ResultWriter.cpp
homework_07_simulations/src/solvers/: AnalyticalSolver.cpp  TableSolver.cpp
homework_12/edge/: README.md
homework_12/edge/c2/: Dockerfile
homework_12/edge/c2/src/: c2_controller.cpp
homework_13/robot_ws/src/antidrone_turret/: CMakeLists.txt
homework_13/robot_ws/src/antidrone_turret/include/antidrone_turret/: turret_controller.hpp
homework_13/robot_ws/src/antidrone_turret/src/: gimbal_driver_node.cpp  turret_controller_node.cpp  yaw_servo_driver_node.cpp
homework_13/robot_ws/src/antidrone_turret/test/: turret_controller_test.cpp
